2008-11-10  Stefan Kost  <ensonic@users.sf.net>


	* src/BuzzMachineLoader/BuzzMDKHelper.cpp:
	* src/BuzzMachineLoader/BuzzMDKHelper.h:
	* src/BuzzMachineLoader/BuzzMachineCallbacks.cpp:
	* src/BuzzMachineLoader/BuzzMachineCallbacksPre12.cpp:
	* src/BuzzMachineLoader/BuzzMachineLoader.cpp:
	* src/BuzzMachineLoader/BuzzMachineLoader.h:
	* src/BuzzMachineLoader/mdkimp.h:
	  Revert reordering. Add some more comments. Need to recomplie a win32
	  binary.

2008-11-10  Stefan Kost  <ensonic@users.sf.net>

	* src/BuzzMachineLoader/BuzzMachineLoader.cpp:
	  Reoder function and modify initialisation sequence.

2008-11-04  Stefan Kost  <ensonic@users.sf.net>

	* dllwrapper1/wine/Makefile.am:
	  Try using --ffast-math (recommended in the source).

	* dllwrapper1/wine/win32.c:
	  Make more stuff static and disable some unused things.

2008-11-04  Stefan Kost  <ensonic@users.sf.net>

	* dllwrapper1/wine/module.c:
	* dllwrapper1/wine/pe_image.c:
	  Indeting and more logging.

2008-10-17  Stefan Kost  <ensonic@users.sf.net>

	* TODO:
	* dllwrapper1/wine/win32.c:
	  Wrap one more win api to get "cheapo spread" working.

2008-09-24  Stefan Kost  <ensonic@users.sf.net>

	* dllwrapper1/wine/Makefile.am:
	* src/BuzzMachineLoader/Makefile.am:
	* src/Makefile.am:
	  Don't confuse CPPFLAGS with CFLAGS.

2008-09-24  Stefan Kost  <ensonic@users.sf.net>

	* dllwrapper1/wine/win32.c:
	  Use buzz.exe as a app name.

	* dllwrapper1/wine/Makefile.am:
	* src/BuzzMachineLoader/Makefile.am:
	* src/Makefile.am:
	  Get rid of INCLUDES variable (automake deprecates it).

2008-09-22  Stefan Kost  <ensonic@users.sf.net>

	* configure.ac:
	  Display summary after configure.

2008-09-04  Stefan Kost  <ensonic@users.sf.net>

	* src/BuzzMachineLoader/Makefile.am:
	* src/Makefile.am:
	  Do not install the test apps.

2008-09-04  Stefan Kost  <ensonic@users.sf.net>

	* src/BuzzMachineLoader/Makefile.am:
	  Don't install *.a for dlopened libs.

2008-09-02  Stefan Kost  <ensonic@users.sf.net>
